--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "element-plus": "^2.3.7",
+    "firebase": "^9.23.0",
     "vue": "^3.2.13"
   },
   "devDependencies": {
